Refactor FSBehavior -> OakI18nBehavior

--- a/bower.json
+++ b/bower.json
@@ -24,9 +24,9 @@
     "fs-card": "jshcrowthe/fs-card",
     "layout": "Polymer/layout",
     "polymer": "Polymer/polymer#~1.2.0",
-    "fs-behavior": "jshcrowthe/fs-behavior",
     "wc-i18n": "jshcrowthe/wc-i18n#^1.1.0",
-    "iron-image": "PolymerElements/iron-image#^1.2.3"
+    "iron-image": "PolymerElements/iron-image#^1.2.3",
+    "oak-i18n-behavior": "FamilySearchElements/oak-i18n-behavior"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6",
