--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6",
-    "iron-ajax": "PolymerElements/iron-ajax#~1.0.6"
+    "iron-ajax": "PolymerElements/iron-ajax#~1.0.6",
+    "web-component-tester": "~4.3.1"
   },
   "resolutions": {
     "polymer": "^1.2.0"
