--- a/bower.json
+++ b/bower.json
@@ -27,12 +27,13 @@
     "polymer": "Polymer/polymer#~1.2.0",
     "wc-i18n": "jshcrowthe/wc-i18n#^1.1.0",
     "iron-image": "PolymerElements/iron-image#^1.2.3",
+    "iron-ajax": "PolymerElements/iron-ajax#~1.0.6",
+    "oak-ajax-behavior": "FamilySearchElements/oak-ajax-behavior",
     "oak-i18n-behavior": "FamilySearchElements/oak-i18n-behavior",
     "fs-styles": "fs-webdev/fs-styles"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6",
-    "iron-ajax": "PolymerElements/iron-ajax#~1.0.6",
     "web-component-tester": "~4.3.1"
   },
   "resolutions": {
