--- a/bower.json
+++ b/bower.json
@@ -24,12 +24,12 @@
   "dependencies": {
     "cedar-card": "FamilySearchElements/cedar-card#1.x",
     "layout": "Polymer/layout",
-    "polymer": "Polymer/polymer#~1.2.0",
-    "wc-i18n": "jshcrowthe/wc-i18n#^1.1.0",
+    "polymer": "Polymer/polymer#^1.2.0",
+    "wc-i18n": "jshcrowthe/wc-i18n#^2.1.0",
     "iron-image": "PolymerElements/iron-image#^1.2.3",
     "iron-ajax": "PolymerElements/iron-ajax#~1.0.6",
     "oak-ajax-behavior": "FamilySearchElements/oak-ajax-behavior",
-    "oak-i18n-behavior": "FamilySearchElements/oak-i18n-behavior",
+    "oak-i18n-behavior": "FamilySearchElements/oak-i18n-behavior#1.x",
     "fs-styles": "fs-webdev/fs-styles"
   },
   "devDependencies": {
