--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 sudo: true
 dist: trusty
 before_script:
-  - npm install -g bower polylint web-component-tester istanbul git+https://github.com/thedeeno/web-component-tester-istanbul.git coveralls
+  - npm install -g bower web-component-tester
   - bower install
 env:
   global:
@@ -22,5 +22,4 @@ addons:
   sauce_connect: true
 script:
   - xvfb-run wct
-  - "if [ \"${TRAVIS_PULL_REQUEST}\" = \"false\" ]; then wct -s 'default'; fi"
-after_script: 'cat ./coverage/lcov.info | coveralls'
+  - "if [ \"${TRAVIS_PULL_REQUEST}\" = \"false\" ]; then wct --plugin sauce; fi"
