Migrated from FamilySearchElements and renamed the component
The component was renamed from `birch-artifact-grid-item` to
`fs-artifact-grid-item`.

--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
-  "name": "birch-artifact-grid-item",
+  "name": "fs-artifact-grid-item",
   "version": "2.3.0",
   "authors": [
     "Josh Crowther <jshcrowthe@gmail.com>"
   ],
   "description": "An element that renders any artifact in the gallery grid format",
-  "main": "birch-artifact-grid-item.html",
+  "main": "fs-artifact-grid-item.html",
   "moduleType": [],
   "keywords": [
     "button",
