Updated bower.json and migrated component usages
These updates are for components migrated from
`FamilySearchElements` and renamed to begin with `fs`.

--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "/demo"
   ],
   "dependencies": {
-    "cedar-card": "FamilySearchElements/cedar-card#1.x",
+    "fs-card": "fs-webdev/fs-card#1.x",
     "layout": "fs-webdev/layout#1.0.0",
     "polymer": "Polymer/polymer#^1.2.0",
     "wc-i18n": "jshcrowthe/wc-i18n#^2.1.0",
