--- a/bower.json
+++ b/bower.json
@@ -30,7 +30,8 @@
     "iron-ajax": "PolymerElements/iron-ajax#~1.0.6",
     "oak-ajax-behavior": "fs-webdev/oak-ajax-behavior",
     "oak-i18n-behavior": "fs-webdev/oak-i18n-behavior#1.x",
-    "fs-styles": "fs-webdev/fs-styles"
+    "fs-styles": "fs-webdev/fs-styles",
+    "fs-metrics": "fs-webdev/fs-metrics#1.x"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#~1.0.6",
